--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Edoardo Herianto Portfolio<br />
 						</h1>
-						<p>Data Analyst well versed in SQL, R, Python, Tableu <br /> 
+						<p>Data Analyst well versed in SQL, R, Python, Tableau <br /> 
 						<a href="https://www.linkedin.com/in/edoardo-herianto/">@edoardo-herianto</a><a href="https://github.com/edher01"></a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
