--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
 									
 									<h2><a href="https://github.com/edher01/PortfolioProjects/blob/main/Housing%20Data%20Cleaning.sql">HOUSING DATA CLEANING IN SQL<br />
 									</a></h2>
-									<p>In this project I cleaned the housing data in SQL Server. </p>
+									
 								</header>
 								<a href="https://github.com/edher01/PortfolioProjects/blob/main/Housing%20Data%20Cleaning.sql" class="image main"><img src="images/housing.png" alt="" /></a>
+								<p>In this project I cleaned a housing data in SQL Server. </p>
 								<ul class="actions special">
 									<li><a href="https://github.com/edher01/PortfolioProjects/blob/main/Housing%20Data%20Cleaning.sql" class="button large">View Project</a></li>
 								</ul>
@@ -85,7 +86,7 @@
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/edoardo.herianto/viz/netflixdashboard_16854942306820/NETFLIXDashboard?publish=yes" class="image fit"><img src="images/netscreen.jpg" alt="" /></a>
-									<p>Netflix Dashboard Insight using Tableau</p>
+									<p>I Developed an insightful and user-friendly dashboard using Tableau to analyze Netflix content.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/edoardo.herianto/viz/netflixdashboard_16854942306820/NETFLIXDashboard?publish=yes" class="button">View Project</a></li>
 									</ul>
@@ -97,7 +98,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/edher01/PortfolioProjects/blob/main/Movie%20Portfolio%20Project.ipynb" class="image fit"><img src="images/topten.jpeg" alt="" /></a>
-									<p>Using python to find Correlation</p>
+									<p>Conducted an analysis using Python to explore the correlation between a movie's budget and its gross revenues.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/edher01/PortfolioProjects/blob/main/Movie%20Portfolio%20Project.ipynb" class="button">View Project</a></li>
 									</ul>
@@ -109,7 +110,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/edher01/PortfolioProjects/blob/main/WineQualityPrediction.R" class="image fit"><img src="images/wine.jpeg" alt="" /></a>
-									<p>Predicting the quality ratings of wine using it's chemical properties in R</p>
+									<p>Developed a Machine Learning Model in R to analyze how chemical properties influence wine quality ratings</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/edher01/PortfolioProjects/blob/main/WineQualityPrediction.R" class="button">View Project</a></li>
 									</ul>
@@ -121,7 +122,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/edher01/PortfolioProjects/blob/main/Amazon%20Web%20Scraper.ipynb" class="image fit"><img src="images/amazon.png" alt="" /></a>
-									<p>Analyze price products</p>
+									<p>In this project I scrape data from Amazon to analyze price data for price products</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/edher01/PortfolioProjects/blob/main/Amazon%20Web%20Scraper.ipynb" class="button">View Project</a></li>
 									</ul>
