--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 									<p>Data Exploration of Covid 19 Dataset in SQL Server.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/edher01/PortfolioProjects/blob/main/COVID%20Data%20Exploration.sql" class="button">View Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/edoardo.herianto/viz/CovidVaccineTracker_16855441668450/CovidVaccineTracker?publish=yes" class="button">View Tableau</a></li>
 									</ul>
 								</article>
 								<article>
@@ -190,3 +191,4 @@
 
 	</body>
 </html>
+
